Spacing Fix

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,18 +1,6 @@
 #mapContainer {
-  /*
-  height: 300px;
-  width: 600px;
-  background-color: powderblue;
-  padding: 1%;
-  position: fixed;
-
-  width: 400px;
-  height: 700px;
-  position: absolute;
-  text-align:center;
-  */
   width:50%;
-  height:200px;
+  height:300px;
   margin: auto;
   position: relative;
 }
@@ -41,7 +29,7 @@
 .slider {
   -webkit-appearance: none;
   width: 100%;
-  height: 15px;
+  height: 10px;
   border-radius: 5px;
   background: #ffffff;
   outline: none;
@@ -71,7 +59,9 @@
     background: #0077ff;
     cursor: pointer;
   }
-
+  .icon{
+    padding: 0;
+  }
   .column {
     float: left;
     width: 5%;
@@ -87,7 +77,7 @@
 
   body{
     font-family: 'Varela Round', serif;
-    font-size:16px;
+    font-size:12px;
     margin:10;
     text-align: center;
   }
@@ -96,6 +86,7 @@ h1{
   font-size: 24px;
   color: white;
   text-align: center;
+  padding: 0; margin: 0;
 }
 
 #branding{
@@ -108,83 +99,23 @@ h1{
 /*Header */
 header{
   color:#013F85;
-  min-height:40px;
+  min-height:20px;
   text-align: center;
 }
 
 h2{
   font-size: 14px;
   text-align: center;
+  padding: 0; margin: 0;
 }
 
 h3{
   font-size: 14px;
   text-align: center;
   color:#ffffff;
+  padding: 0; margin: 0;
 }
 
-/*
-.sanders{
-    width: 25%;
-    background: #3b99a7;  /*teal
-    float: center;
-}
-/*
-.sanders:before{
-    content: "";
-    display: block;
-    padding-left: 15%;
-    padding-top: 5%;
-}
-
-.warren{
-    width: 5%;
-    background: #e26e42;  /*orange
-    float: center;
-}
-.warren:before{
-    content: "";
-    display: block;
-    padding-left: 25%;
-    padding-top: 10%;
-}
-
-.buttigieg{
-    width: 5%;
-    background: #ffb609;  /*gold
-    float: right;
-}
-.buttigieg:before{
-    content: "";
-    display: block;
-    padding-left: 35%;
-    padding-top: 15%;
-}
-
-.biden{
-    width: 5%;
-    background: #8357aa;  /*purple
-    float: right;
-}
-.biden:before{
-    content: "";
-    display: block;
-    padding-left: 45%;
-    padding-top: 20%;
-}
-
-.klobuchar{
-    width: 5%;
-    background: #31803d;  /*green
-    float: right;
-}
-.klobuchar:before{
-    content: "";
-    display: block;
-    padding-left: 55%;
-    padding-top: 25%;
-}
-*/
 /*
 #experience{
   align-items: center;
@@ -214,20 +145,9 @@ form:hover{
 
 .row{
   text-align: center;
+  margin-top: 0;
 }
 
-/*
-canvas{
-  display: block;
-  vertical-align: bottom;
-  padding-left: 10px;
-  padding-right:10px;
-  margin-left: auto;
-  margin-right: auto;
-  width: 50%;
-
-}
-*/
 #particle-container{
   position: absolute;
   width: 100%;
